--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,10 +1,8 @@
 #app {
 
   .main-container {
+    width: 100%;
     min-height: 100%;
-    transition: margin-left .28s;
-    margin-left: $sideBarWidth;
-    position: relative;
   }
   /** 导航菜单样式 */
   .sidebar-container {
